Minor style changes. Icon row in top header no longer spans two rows on iphone 5. "Submit" button gets more space above

--- a/public/src/stylesheets/bookends.scss
+++ b/public/src/stylesheets/bookends.scss
@@ -57,8 +57,14 @@ footer{
 
 #iconRow img {
   height: 3em;
-  min-width: 3em;
-  max-width: 6em;
+  width: 3em;
+}
+
+@media(max-width: 500px) {
+  #iconRow img {
+    height: 2.5em;
+    width: 2.5em;
+  }
 }
 
 .wrapper {
